Fix center align of nav button in PageViews
Enact-DCO-1.0-Signed-off-by: Juwon Jeong (juwon.jeong@lge.com)

--- a/PageViews/PageViews.module.less
+++ b/PageViews/PageViews.module.less
@@ -11,6 +11,7 @@
 		display: flex;
 		align-items: center;
 		width: 2*@sand-button-small-height;
+		justify-content: center;
 	}
 
 	.steps {
